# domashka_web_12

./: main.py  pyproject.toml
src/: schemas.py
src/conf/: config.ini
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
